Fix for collapsable sidebar button (#6616)

--- a/packages/commonwealth/client/scripts/views/components/sidebar/CollapsableSidebarButton/CollapsableSidebarButton.scss
+++ b/packages/commonwealth/client/scripts/views/components/sidebar/CollapsableSidebarButton/CollapsableSidebarButton.scss
@@ -7,11 +7,15 @@
     overflow: hidden;
     z-index: 5;
     transition: 0.2s linear;
+    pointer-events: none;
+
+    &.collapsed {
+      pointer-events: auto;
+    }
 
     &.expanded {
       width: 290px;
       transition: 0.2s linear;
-      pointer-events: none;
     }
   }
 
